# iPaste

./: .gitignore  AGENT.md  LICENSE  NOTICE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: category-tag-style-review.html  sidebar-tab-style-gallery.html
docs/idea/: 快捷动作与自动化方案.md
key/: ipaste-updater.key.pub
scripts/: bump-version.mjs  configure-updater-endpoints.mjs  mirror-r2-release.mjs
src/: App.vue  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryRail.vue  ClipCard.vue  ClipViewerWindow.vue  DetailPane.vue  LanguageSelect.vue  SettingsWindow.vue  TopBar.vue  UpdateDialog.vue
src/composables/: useUpdater.ts
src/lib/: clipMedia.ts  cloudApi.ts  format.ts  ipasteApi.ts  tooltips.ts
src/stores/: ipasteStore.ts
src/styles/: main.css
