[package]
name = "ipaste"
version = "0.2.9"
description = "A local-first tray clipboard manager for macOS and Windows."
authors = ["iPaste Contributors"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ipaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.6.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_DataExchange"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSPasteboard", "NSResponder", "NSRunningApplication", "NSWindow", "NSWorkspace"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["std", "CFCGTypes", "objc2"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSError", "NSRange", "NSString", "NSURL"] }
